Fix bug on events page where z-index was breaking links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,6 +265,7 @@ footer a {
     flex-direction: column;
     overflow: hidden;
     justify-content: space-evenly;
+    z-index: 0;
 }
 
 #major-events h2 {
